# xendit-c

./: .gitignore  CMakeLists.txt  LICENCE  README.md
include/: CMakeLists.txt  xendit.h  xendit.hpp
src/: CMakeLists.txt  balance.c  http_request.c  http_request.h  strings.c  strings.h  xendit.c  xendit_private.h
tests/: CMakeLists.txt  http_request.c  strings.c  xendit.c
